Fix gap in promo block

--- a/src/components/pages/liquidity-page/components/PromoBlock/PromoBlock.module.css
+++ b/src/components/pages/liquidity-page/components/PromoBlock/PromoBlock.module.css
@@ -26,7 +26,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 4px;
   line-height: 19px;
 }
 
